Some cleanup and content updates - cleaned up some typos in WSL guide - added information on how to sign-up and password recovery for V0 - added a note that fandom coders is on hiatus

--- a/docusaurus/docs/engineering/start-developing/wsl.mdx
+++ b/docusaurus/docs/engineering/start-developing/wsl.mdx
@@ -23,7 +23,7 @@ where to install it. If you've never used WSL and don't have a current Linux
 distro set-up we recommend you follow the guide in order.
 
 In some places we have chosen to link to other installation guides which provide
-additional information or contextm or to ensure you have the most up-to-date
+additional information or context or to ensure you have the most up-to-date
 installs. Linking to an external guide is not an indication of complexity! We've
 included an estimated reading/working time (not including download and install
 times) to give you an idea of how long each external source is; reading/working
@@ -42,7 +42,7 @@ you can add a second distro by
 
 The guide uses the Windows logo <FontAwesomeIcon icon={faWindows} /> to indicate
 items that should be installed directly to Windows, while the Linux logo <FontAwesomeIcon icon={faLinux} />
-indicates items that should be installed xdddsinto your chosen Linux distro (Ubuntu).
+indicates items that should be installed into your chosen Linux distro (Ubuntu).
 
 :::
 <!-- prettier-ignore-end -->
@@ -104,7 +104,7 @@ Powershell 7 as your default profile.
 
 3. Follow the
    [instructions here](https://learn.microsoft.com/en-us/windows/wsl/install#upgrade-version-from-wsl-1-to-wsl-2)
-   [<FontAwesomeIcon icon={faClock} /> 1 min] to verify you've installd WSL2 or
+   [<FontAwesomeIcon icon={faClock} /> 1 min] to verify you've installed WSL2 or
    to upgrade from WSL to WSL2, if needed.
 
 4. [Upgrade and update Ubuntu packages](https://learn.microsoft.com/en-us/windows/wsl/setup/environment#update-and-upgrade-packages)
@@ -203,7 +203,7 @@ issue.
    curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.3/install.sh | bash
    ```
 
-2. Verify your nvm insall by running:
+2. Verify your nvm install by running:
 
    ```bash showLineNumber
    command -v nvm
@@ -259,7 +259,7 @@ you can install yarn using npm.
 2. To verify your yarn install:
 
    ```bash showLineNumbers
-   yarn install
+   yarn version
    ```
 
 Your terminal will reply with a version number. Like git, you can use the most
@@ -386,7 +386,7 @@ and WSL.
   path? Follow these instructions to jazz it up a bit.
 
 - Check out our other
-  [Recommened Tools](/docs/engineering/knowledge-base/recommended-tools#recommended-vscode-extensions)
+  [Recommended Tools](/docs/engineering/knowledge-base/recommended-tools#recommended-vscode-extensions)
   for more extension recommendations!
 
 ## Quick Command Line Guide
@@ -428,7 +428,7 @@ be used in a Windows terminal!
 
 - `mkdir [folder_name]` creates a folder with the name provided
 
-- `mv [oldname] [newname]` renames the folder with `[oldname]` to `[newname]`
+- `mv [old_name] [new_name]` renames the folder with `[old_name]` to `[new_name]`
 
 - `rm` removes the provided file or folder. Please see the options below for
   more details!
