update current priotities

--- a/docusaurus/docs/product/roadmap/priorities-and-status.mdx
+++ b/docusaurus/docs/product/roadmap/priorities-and-status.mdx
@@ -4,7 +4,7 @@ sidebar_position: 1.1
 
 # Priorities and status
 
-_Last updated: October 13th, 2022_
+_Last updated: March 23th, 2022_
 
 **Current phase:** pre-beta.
 
@@ -23,7 +23,7 @@ To do this, we're facing two major blockers:
    (in progress 💨).
 2. **Organizational:** the BobaBoard organization must be able to coordinate one (or more) team of
    volunteers maintaining and extending its functionality (never "done", but encouragingly successful ✅),
-   as well as finding the right community managers to further grow the community (soon to start ⏸).
+   as well as finding the right community managers to further grow the community (in progress ⏸).
 
 Maintaining a social network is hard work, and any project is at high risk of failure or "progress stallmate"
 without a strong team (and processes) backing it. While the technological challenges are important, it's
