add a sentence about financial sustainability

--- a/docusaurus/docs/product/roadmap/priorities-and-status.mdx
+++ b/docusaurus/docs/product/roadmap/priorities-and-status.mdx
@@ -25,6 +25,8 @@ To do this, we're facing two major blockers:
    volunteers maintaining and extending its functionality (never "done", but encouragingly successful ✅),
    as well as finding the right community managers to further grow the community (in progress ⏸).
 
+   Furthermore, the BobaBoard organization must reach some level of financial sustainability.
+
 Maintaining a social network is hard work, and any project is at high risk of failure or "progress stallmate"
 without a strong team (and processes) backing it. While the technological challenges are important, it's
 the organizational effort that will make or break the project.
