add sentence about policies

--- a/docusaurus/docs/product/roadmap/priorities-and-status.mdx
+++ b/docusaurus/docs/product/roadmap/priorities-and-status.mdx
@@ -23,7 +23,9 @@ To do this, we're facing two major blockers:
    (in progress 💨).
 2. **Organizational:** the BobaBoard organization must be able to coordinate one (or more) team of
    volunteers maintaining and extending its functionality (never "done", but encouragingly successful ✅),
-   as well as finding the right community managers to further grow the community (in progress 💨).
+   as well as finding the right community managers to further grow the community (in progress 💨) and
+   to help us define policies and processes that reflect our values and commitments to our user base
+   (just started 🚶‍♀️).
 
    Furthermore, the BobaBoard organization must reach some level of financial sustainability.
 
