update recent activities

--- a/docusaurus/docs/product/roadmap/priorities-and-status.mdx
+++ b/docusaurus/docs/product/roadmap/priorities-and-status.mdx
@@ -1,10 +1,11 @@
 ---
 sidebar_position: 1.1
+log: https://docs.oscollective.org/guides/marketing-publicity-roadmaps-and-comms#why-a-roadmap
 ---
 
 # Priorities and status
 
-_Last updated: March 23th, 2022_
+_Last updated: March 23th, 2023_
 
 **Current phase:** pre-beta.
 
@@ -33,40 +34,11 @@ Maintaining a social network is hard work, and any project is at high risk of fa
 without a strong team (and processes) backing it. While the technological challenges are important, it's
 the organizational effort that will make or break the project.
 
-## Current status
+## Recent activities
 
-_Last updated: October 13th, 2022_
+_Last updated: March 23th, 2023. [Previous update October 13th, 2022](https://github.com/BobaBoard/boba-docs/blob/main/docusaurus/docs/product/roadmap/priorities-and-status.mdx#current-status)._
 
-- **At the beginning of this year we launched [the "fandom coders" community](https://www.fancoders.com/)**,
-  a space where coders in fandom can come together to learn from each other, ask for advice, and collaborate on projects.
-  The initial Fandom Coders Discord has been very successful, and the community is actively growing. There are clear, strong
-  signals Fandom Coders will (more and more with time) lead to increased participations of fans in open source fandom projects,
-  be them BobaBoard, Dreamwidth, AO3, or any other.
-- **On 6/9, we officially launched our First Second Realm: the Fandom Coders Realm.** This fundamental stepping stone
-  gave us a concrete idea of where we stand on the road towards a multi-community platform: _close enough to taste it_. Unfortunately,
-  the project had to take [an unforeseen, hard break (cn: petloss)](https://at.tumblr.com/bobaboard/689974406979747840/41tes3h4y9ba) right
-  after launch, which left the community in a limbo state. As we ramp our operations back up, we'll go back to growing the community,
-  and expanding its functionality, activity, and reach.
-- **In the month leading up to 6/9, we succesfully completed our first "volunteers sprint"** ([see below](#current-sprints)).
-  During this time, a small team of volunteers collaborated tirelessly on our ["Realm beta-ish sprint"](https://github.com/orgs/BobaBoard/projects/6),
-  a collection of tasks necessary to launch a pre-beta version of our Realms functionality and set up the Fandom Coders Realm. This sprint
-  was a fundamental learning experience, and lead us to define a framework for our timed sprints, identify important areas of improvements
-  for our technical documentation and processes, and train people other than Ms Boba on the intricacies of the BobaBoard codebase.
-- **At the beginning of October, we open sourced the last of BobaBoard's codebases.** The project is now fully open source, which
-  means its code can be looked at, modified, and used by anyone. While this makes it theoretically possible for people to run their
-  own BobaBoard instance, there is still a long way to go before we can reccommend anyone attempt to do so.
-- **Throughtout these last months, we've been moving more and more of our processes and discussions out in the open.** This is
-  mainly being pursued by expanding [the BobaBoard organization on GitHub](https://github.com/orgs/BobaBoard), a state-of-the-art software
-  for the management of open source projects. You can see examples of our work by browsing [the issues tab](https://github.com/BobaBoard/issues/issues),
-  our [ongoing projects](https://github.com/orgs/BobaBoard/projects?query=is%3Aopen), and [our discussion(s)](https://github.com/BobaBoard/issues/discussions/98).
-
-And, of course, we'd be remiss if we didn't mention our April 1st project: [FujoBoard, the modern evolution of the yaoi paddle](https://www.fujoboard.com/)
-(for actual sale).
-
-:::note
-A big shoutout to [Sumana Harihareswara](https://www.harihareswara.net/) for her invaluable mentorship, which helped Ms Boba ~~get her shit together~~
-improve BobaBoard's volunteering experience and general organization. We could not have done it without her!
-:::
+You can find an overview of the 2022 activities [in our current new year retrospective](https://www.bobaboard.com/blog/development-logs-10) released in March 2023.
 
 ## Next up
 
