update the next up section

--- a/docusaurus/docs/product/roadmap/priorities-and-status.mdx
+++ b/docusaurus/docs/product/roadmap/priorities-and-status.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 1.1
-log: https://docs.oscollective.org/guides/marketing-publicity-roadmaps-and-comms#why-a-roadmap
+inspiration: https://docs.oscollective.org/guides/marketing-publicity-roadmaps-and-comms#why-a-roadmap
 ---
 
 # Priorities and status
@@ -36,18 +36,14 @@ the organizational effort that will make or break the project.
 
 ## Recent activities
 
-_Last updated: March 23th, 2023. [Previous update October 13th, 2022](https://github.com/BobaBoard/boba-docs/blob/main/docusaurus/docs/product/roadmap/priorities-and-status.mdx#current-status)._
+_Last updated: March 23th, 2023. [Previous update October 13th, 2022](https://github.com/BobaBoard/boba-docs/commit/2fd18c963e65a807a8c0fa743c6285dda9d70bbd)._
 
 You can find an overview of the 2022 activities [in our current new year retrospective](https://www.bobaboard.com/blog/development-logs-10) released in March 2023.
 
 ## Next up
 
-As of October 2022, we're currently undergoing a "ramp-back-up" sprint—codenamed [Annoyances Be Gone](https://github.com/orgs/BobaBoard/projects/5)—meant
-to give volunteers and Ms Boba the chance to work some rust off after the forced break. During this sprint, we're solving some of the
-most common annoyances users and developers face on their BobaBoard journey, while defining and improving even more of our
-processes.
+_Last updated: March 23th, 2023. [Previous update October 13th, 2022](https://github.com/BobaBoard/boba-docs/commit/2fd18c963e65a807a8c0fa743c6285dda9d70bbd)._
 
-After this phase is over, we'll go back to working on Realms, and begin to focus on finding the right community managers
-to lead our further expansion.
+You can find a broad overview of the 2023 roadmap [in the roadmap section of our current new year retrospective](https://www.bobaboard.com/blog/development-logs-10#the-2023-roadmap-part-1-main-focus-areas) released in March 2023.
 
 For the most up-to-date information, check the [sprints and projects](./sprints-and-projects) page.
