update doc after feedback

--- a/docusaurus/docs/volunteering/retrospectives.mdx
+++ b/docusaurus/docs/volunteering/retrospectives.mdx
@@ -10,9 +10,10 @@ what didn't, and how we can improve in the future.
 ## What is a retrospective
 
 A retrospective is a meeting (or, in our case, "a thread") where volunteers involved in a project reflect
-on the work done, and surface both positive and negative experiences. The goal of a retrospective is not to
-air grievances and assign blame, but to improve the experience of those involved in future projects by
-identifying areas that are working well and areas that need rethinking.
+on the work done, and surface both positive and negative experiences. The goal of a retrospective is to
+improve the experience of those involved in future projects by identifying areas that are working well
+and areas that need rethinking, without assigning blame to specific contributors for issues that might
+have arised.
 
 At the end of a retrospective, the team should have some answers to the following questions:
 
@@ -51,15 +52,18 @@ effort and the retrospective, volunteers should:
    that improvements be framed not in terms of changing people's behavior, but in terms of changing the
    underlying process that led to the issue.
 
-If you can't think of anything, that's ok! Just come to the retrospective, listen to what others have to say,
-and be ready to share your thoughts.
-
 ### During a retrospective
 
 1. **Ms Boba starts a retrospective thread**, and pings everyone involved in the effort.
 2. Ms Boba shares the agenda for the retrospective, and reminds everyone of the purpose and mindset of the
    retrospective.
 3. **Everyone shares their thoughts on what went well and what didn't**, and we look for common themes.
+
+   :::warning
+   While giving feedback is a fundamental part of the retrospective process, it is important to do so with
+   kindness and respect. Please be mindful of your tone and language!
+   :::
+
 4. Once the main issues have been identified, we discuss actionable improvements that could have helped
    mitigate them.
 5. Ms Boba summarizes the discussion, and **we decide on a few actionable improvements to implement in the
@@ -79,7 +83,56 @@ places, and ideally filed as issues in our repositories when applicable.
 
 ## What if I...
 
-:::TODO
-This section is filled when volunteers bring up questions they still have after reading the document! Please
-ask your questions to Ms Boba on Discord, and she'll add the appropriate answers here.
-:::
+### ...can't think of anything to say?
+
+If you can't think of anything, that's ok! Just come to the retrospective, listen to the issues and solutions
+that others bring up, and be ready to share your thoughts, even if it's simply agreeing or disagreeing.
+
+### ...am not available while the retrospective is happening?
+
+Ms Boba is always available to collect people's thoughts before the retrospective, and (given permission) will
+bring them up herself to make sure they're discussed. If you can't make it to the retrospective, please
+share your thoughts with her beforehand.
+
+After the retrospective, a summary should be available for people to catch up with. Please read the document
+carefully, and let us know if there are additional points or thoughts you'd like to share. The retrospective
+thread remains open after the meeting itself.
+
+### ...am worried about being the only one giving feedback?
+
+Ms Boba will always be present in the retrospective, and always has things to complain about. It's unlikely
+that you'll be the only one giving feedback! Regardless, a retrospective is valuable even if only one person
+shares their thoughts, and we encourage you to do so.
+
+### ...am worried about others taking feedback personally?
+
+Retrospectives are a blameless process that requires team members to trust each other to give feedback kindly
+and respectfully, and to receive it with an open mind and a growth mindset. While emotions are a natural part
+of the process, it's important to keep them in check and not let them take over. If you feel someone is
+not living up to these expectations, please let Ms Boba know privately. Likewise, if you feel you're not
+in the right mindset to continue a discussion, let Ms Boba know so she can redirect the discussion or call
+for a break.
+
+If there is an issue you're particularly worried in bringing up, you can also share it with Ms Boba before the
+retrospective, and she will bring it up herself without revealing your identity. We also have an anonymous
+feedback form that you can use to share your thoughts.
+
+### ...have an issue I want to bring up outside of the retrospective?
+
+You should always feel free to bring up issues, either in private with Ms Boba, in the relevant channels, or
+in our feedback form.
+
+Note that not all issues can be solved or discussed immediately. If more urgent work is happening, the issue
+may be postponed until a more appropriate time, potentially as part of the next retrospective.
+
+### Appendix: Why blameless retrospectives?
+
+When a problem happens, it's human tendency to look for someone to blame. While this is a natural reaction,
+it's not a productive one: blaming someone for a problem does not solve the problem, and it does not prevent
+the problem from happening again. It also makes people afraid of making mistakes, which negatively impacts
+the culture of the project and of the organization as a whole.
+
+Blameless retrospectives are a way to break this cycle. By focusing on the process rather than the people,
+they help participants learn from mistakes and grow as a team, without feeling the need to hide issues away
+or look for a scapegoat. They help us build a culture of trust and respect that makes participating in our
+project a positive experience for everyone involved.
