update after feedback

--- a/docusaurus/docs/volunteering/retrospectives.mdx
+++ b/docusaurus/docs/volunteering/retrospectives.mdx
@@ -100,7 +100,7 @@ thread remains open after the meeting itself.
 
 ### ...am worried about being the only one giving feedback?
 
-Ms Boba will always be present in the retrospective, and always has things to complain about. It's unlikely
+Ms Boba will always be present in the retrospective, and always has things to discuss. It's unlikely
 that you'll be the only one giving feedback! Regardless, a retrospective is valuable even if only one person
 shares their thoughts, and we encourage you to do so.
 
@@ -122,8 +122,14 @@ feedback form that you can use to share your thoughts.
 You should always feel free to bring up issues, either in private with Ms Boba, in the relevant channels, or
 in our feedback form.
 
-Note that not all issues can be solved or discussed immediately. If more urgent work is happening, the issue
-may be postponed until a more appropriate time, potentially as part of the next retrospective.
+Note that we may not be able to discuss or solve all issues the moment they come up. If the team has no
+bandwidth available (for example because urgent work is currently happening), we may need to postpone the
+discussion until a more appropriate time.
+
+Regardless, it's important that your concerns be heard and acknowledged, and that a plan is made to address
+them in the future. At the time when the issue is brought up, Ms Boba will give you an estimate of when
+the issue can be discussed, and will follow up with you when the time comes. If that shouldn't happen,
+please don't hesitate to ping her!
 
 ### Appendix: Why blameless retrospectives?
 
