--- a/docusaurus/docs/volunteering/coding/sprints.mdx
+++ b/docusaurus/docs/volunteering/coding/sprints.mdx
@@ -1,8 +1,8 @@
 ---
-sidebar_position: 3
+sidebar_position: 2
 ---
 
-# Joining a sprint
+# Joining A Sprint
 
 Joining a sprint is the easiest way to help out with BobaBoard's development. We're currently planning to onboard 3-4 new developers
 with each subsequent sprint.
