getting all the broken links.

--- a/docusaurus/docs/volunteering/overview/index.mdx
+++ b/docusaurus/docs/volunteering/overview/index.mdx
@@ -67,7 +67,7 @@ discuss X" template.
 While BobaBoard strives to embody the chaotic and transgressive spirit of some
 corners of transformative fandom, **we expect volunteers and staff to approach
 their roles and tasks with seriousness and respect**, and to familiarize
-themselves with our [code of conduct](./code-of-conduct).
+themselves with our [code of conduct](./volunteering/code-of-conduct).
 
 **Active and clear communication is the most important quality of a successful
 volunteer**. This means volunteers are expected to:
@@ -101,7 +101,7 @@ tech volunteers**. Other types of volunteers are still invited to reach out.
 1. **[Fill the tech volunteering form](https://docs.google.com/forms/d/e/1FAIpQLSdCX2_fZgIYX0PXeCAA-pfQrcLw_lSp2clGHTt3uBTWgnwVSw/viewform)**
    to get access to our volunteers Discord server and our test community while
    BobaBoard is still in its closed alpha phase.
-2. **[Familiarize yourself with BobaBoard codebases.](../engineering/intro)**
+2. **[Familiarize yourself with BobaBoard codebases.](./engineering/intro)**
    BobaBoard's architecture is modular by design. If you're particularly
    interested in a specific area of work, follow the corresponding instructions
    to install a local copy.
