some updates to the retrospective docs

--- a/docusaurus/docs/volunteering/retrospectives.mdx
+++ b/docusaurus/docs/volunteering/retrospectives.mdx
@@ -12,7 +12,7 @@ what didn't, and how we can improve in the future.
 A retrospective is a meeting (or, in our case, "a thread") where volunteers involved in a project reflect
 on the work done, and surface both positive and negative experiences. The goal of a retrospective is to
 improve the experience of those involved in future projects by identifying areas that are working well
-and areas that need rethinking, without assigning blame to specific contributors for issues that might
+and areas that need rethinking, without assigning blame to participants for issues that might
 have arised.
 
 At the end of a retrospective, the team should have some answers to the following questions:
@@ -39,6 +39,19 @@ cause problems should not be held accountable. However, a retrospective is not t
 
 ## Retrospectives in practice
 
+A retrospective goes through three phases:
+
+1. Participants list everything that **went well** during the effort
+2. Participants list everything that **did not go well** during the effort
+3. Participants brainstorm ways to continue and expand the practices in #1 while avoiding the mistakes in #2
+
+:::tip What should I bring to the retrospective?
+
+There's no need to write down long explanations. In our experiences, a list of bullet points
+for each section works best! Further insights will naturally emerge during the discussion.
+
+:::
+
 ### Before a retrospective
 
 A retrospective is usually scheduled a few days after the end of an effort. In the time between the end of the
@@ -52,11 +65,18 @@ effort and the retrospective, volunteers should:
    that improvements be framed not in terms of changing people's behavior, but in terms of changing the
    underlying process that led to the issue.
 
+:::note
+
+Uncovering what went well during an effort is as important as uncovering what didn't! Awareness of what currently
+works well helps ensure good practices aren't forgotten, and increases confidence when making changes.
+
+:::
+
 ### During a retrospective
 
-1. **Ms Boba starts a retrospective thread**, and pings everyone involved in the effort.
-2. Ms Boba shares the agenda for the retrospective, and reminds everyone of the purpose and mindset of the
-   retrospective.
+1. **The Retrospective Lead starts a retrospective thread**, and pings everyone involved in the effort.
+2. The Retrospective Lead shares the agenda for the retrospective, and reminds everyone of the purpose and
+   mindset of the retrospective.
 3. **Everyone shares their thoughts on what went well and what didn't**, and we look for common themes.
 
    :::warning
@@ -64,22 +84,35 @@ effort and the retrospective, volunteers should:
    kindness and respect. Please be mindful of your tone and language!
    :::
 
-4. Once the main issues have been identified, we discuss actionable improvements that could have helped
+4. Once the main issues have been identified, participants discuss actionable improvements that could have helped
    mitigate them.
-5. Ms Boba summarizes the discussion, and **we decide on a few actionable improvements to implement in the
-   next sprint**.
 
-:::note
-During a retrospective, try to refrain from using the word "you". Instead of saying—or thinking!—_"you should
-have done X"_, it's important to frame the discussion as _"we should have done X"_. This helps keep the
-retrospective focused on collective improvement rather than individual blame.
-:::
+   :::warning
+   During a retrospective, try to refrain from using the word "you". Instead of saying—or thinking!—_"you should
+   have done X"_, it's important to frame the discussion as _"we should have done X"_. This helps keep the
+   retrospective focused on collective improvement rather than individual blame.
+   :::
+
+5. The Retrospective Lead (or another participant) summarizes the discussion, and **participants decide on a few
+   actionable improvements to implement in the next sprint**.
 
 ### After a retrospective
 
 A succesful retrospective should result in a few actionable improvements that can be implemented in the
-future, ideally in the very next sprint or effort. These improvements should be captured in the appropriate
+future, ideally starting with the next sprint or effort. These improvements should be captured in the appropriate
 places, and ideally filed as issues in our repositories when applicable.
+
+Not every change surfaced by a retrospective will be immediately implemented—sometimes it might never be! Despite this,
+it's still important to capture what's discussed. Summaries of past retrospectives can be periodically reviewed and
+taken into consideration as new practices emerge, and offer a blueprint for what to strive for in the longer term.
+
+:::tip
+
+If there's a retrospective item you particularly care about seeing implemented, you should feel empowered to take on
+some of the work! Ms Boba or other volunteers will be happy to help you break down the task into manageable pieces,
+or figure out any roadblock that might currently exist.
+
+:::
 
 ## What if I...
 
