--- a/docusaurus/docs/volunteering/retrospectives.mdx
+++ b/docusaurus/docs/volunteering/retrospectives.mdx
@@ -13,7 +13,7 @@ A retrospective is a meeting (or, in our case, "a thread") where volunteers invo
 on the work done, and surface both positive and negative experiences. The goal of a retrospective is to
 improve the experience of those involved in future projects by identifying areas that are working well
 and areas that need rethinking, without assigning blame to participants for issues that might
-have arised.
+have arisen.
 
 At the end of a retrospective, the team should have some answers to the following questions:
 
