--- a/docusaurus/docs/volunteering/github/labels.mdx
+++ b/docusaurus/docs/volunteering/github/labels.mdx
@@ -69,3 +69,4 @@ Click on any label to see the associated issues.
 <FilteredLabelsList prefix="🚨" />
 <FilteredLabelsList prefix="🚧" />
 <FilteredLabelsList prefix="💪" />
+<FilteredLabelsList prefix="⚾" />
