Replace volunteering google form links with newsletter sign up form

--- a/docusaurus/docs/volunteering/experience/volunteer-application.mdx
+++ b/docusaurus/docs/volunteering/experience/volunteer-application.mdx
@@ -3,6 +3,8 @@ sidebar_position: 1
 title: Apply to Volunteer
 ---
 
+import VolunteerNewsletterForm from "@site/src/components/VolunteerNewsletterForm";
+
 ## The Ideal Volunteer
 
 Below are some common traits of our most successful volunteers or are traits
@@ -56,18 +58,18 @@ Highlight the must haves
 
 ## Apply to Volunteer
 
+Upcoming calls for volunteers will be put out through our volunteering newsletter. Please sign up and keep an eye out for opportunities that interest you!
+
 :::warning
 
-**All BobaBoard spaces are 18+ only.** If you're below that age, you'll be inelegible
+**All BobaBoard spaces are 18+ only.** If you're below that age, you'll be ineligible
 to volunteer. We'll be happy to have you once you're all grown up!
 
-By submitting the volunteering form you certify you're of legal age.
+By signing up for the volunteering newsletter you certify you're of legal age.
 
 :::
 
-You can sign up for volunteering through our
-[tech](https://forms.gle/jG2gbfpxVhUE7vyn9) and
-[non-tech](https://forms.gle/Z44UreTxnbvFnoqc9) forms.
+<VolunteerNewsletterForm />
 
 ## FAQs
 
